# customdeps

./: .gitignore  BUILD.md  README.md  pyproject.toml  setup.cfg
custom_deps/: __init__.py
src/custom_deps/: __init__.py
