[metadata]
name = CustomDeps
version = 0.0.1
author = Nicolas Bruot
author_email = coremeltdown@bruot.org
description = Manages modules paths and allows importing specific versions of modules designated by Git commit hashes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bruot/customdeps
project_urls =
    Bug Tracker = https://github.com/bruot/customdeps/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control :: Git

[options]
package_dir =
    = src
packages = find:
install_requires =
    appdirs>=1.3
    GitPython>=2.1
python_requires = >=3.4

[options.packages.find]
where = src
